# orbag-server/src/main/java/orbag/server/action/SerializableAction.java
@@ -2,17 +2,23 @@ package orbag.server.action;
 
 public class SerializableAction {
 
+
 	String identifier;
 	
 	String displayLabel;
+
+	boolean quick;
+
+
 
 	public SerializableAction() {
 		
 	}
 	
-	public SerializableAction(String identifier, String displayLabel) {
+	public SerializableAction(String identifier, String displayLabel, boolean quick) {
 		this.identifier = identifier;
 		this.displayLabel = displayLabel;
+		this.quick = quick;
 	}
 
 	public String getIdentifier() {
@@ -29,5 +35,13 @@ public class SerializableAction {
 
 	public void setDisplayLabel(String displayLabel) {
 		this.displayLabel = displayLabel;
+	}
+
+	public boolean isQuick() {
+		return quick;
+	}
+
+	public void setQuick(boolean quick) {
+		this.quick = quick;
 	}
 }
